# Robotics-HybridRobotics-BerkeleyHumanoidLite

./: README.md  pyproject.toml
scripts/rsl_rl/: train.py
source/berkeley_humanoid_lite/: pyproject.toml
